--- a/COVID_data_manipulation.ipynb
+++ b/COVID_data_manipulation.ipynb
@@ -2392,6 +2392,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Also, scattered chart here can help us compare different data points controlling variables. It's also very easy to implement."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Now we import the detailed covid data time series by country and vaccination data by country."
    ],
    "metadata": {
