--- a/COVID_data_manipulation.ipynb
+++ b/COVID_data_manipulation.ipynb
@@ -6087,14 +6087,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "You can see the several big waves suffered in the US, with the Jan 2021 Delta wave and Jan 2022 Omicron wave the most severe."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
